  . Added support for new HTTP 451 code. (Julien)

- CURL:
  . Fixed bug #71225 (curl_setopt() fails to set CURLOPT_POSTFIELDS with
    reference to CURLFile). (Laruence)
  
- SPL:
  . Fixed bug #71204 (segfault if clean spl_autoload_funcs while autoloading).
    (Laruence)
  . Fixed bug #71202 (Autoload function registered by another not activated
    immediately). (Laruence)

- Standard:
  . Fixed bug #71220 (Null pointer deref (segfault) in compact via ob_start).
    (hugh at allthethings dot co dot nz)
  . Fixed bug #71190 (substr_replace converts integers in original $search
    array to strings). (Laruence)
  . Fixed bug #71188 (str_replace converts integers in original $search array
    to strings). (Laruence)
  . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)

?? Jan 2016 PHP 7.0.2

- Core:
  . Fixed bug #71165 (-DGC_BENCH=1 doesn't work on PHP7).
    (y dot uchiyama dot 1015 at gmail dot com)
  . Fixed bug #71163 (Segmentation Fault: cleanup_unfinished_calls). (Laruence)
  . Fixed bug #71109 (ZEND_MOD_CONFLICTS("xdebug") doesn't work). (Laruence)
  . Fixed bug #71092 (Segmentation fault with return type hinting). (Laruence)
  . Fixed bug memleak in header_register_callback. (Laruence)
  . Fixed bug #71067 (Local object in class method stays in memory for each
    call). (Laruence)
  . Fixed bug #66909 (configure fails utf8_to_mutf7 test). (Michael Orlitzky)
  . Fixed bug #70781 (Extension tests fail on dynamic ext dependency).
    (Francois Laupretre)
  . Fixed bug #71089 (No check to duplicate zend_extension). (Remi)
  . Fixed bug #71086 (Invalid numeric literal parse error within
    highlight_string() function). (Nikita)
  . Fixed bug #71154 (Incorrect HT iterator invalidation causes iterator reuse).
    (Nikita)
  . Fixed bug #52355 (Negating zero does not produce negative zero). (Andrea)
  . Fixed bug #66179 (var_export() exports float as integer). (Andrea)
  . Fixed bug #70804 (Unary add on negative zero produces positive zero).