@@ -19,6 +19,8 @@ PHP                                                                        NEWS
     immediately). (Laruence)
 
 - Standard:
+  . Fixed bug #71245 (file_get_contents() ignores "header" context option if
+    it's a reference). (Laruence)
   . Fixed bug #71220 (Null pointer deref (segfault) in compact via ob_start).
     (hugh at allthethings dot co dot nz)
   . Fixed bug #71190 (substr_replace converts integers in original $search
